gst: Fix caps leak

https://bugzilla.gnome.org/show_bug.cgi?id=775072