tests/examples/directfb/gstdfb.c
@@ -91,11 +91,14 @@ size_changed (GObject * obj, GParamSpec * pspec, IDirectFBWindow * window)
     gint width, height;
 
     if (!(gst_structure_get_int (s, "width", &width) &&
-            gst_structure_get_int (s, "height", &height)))
+            gst_structure_get_int (s, "height", &height))) {
+      gst_caps_unref (caps);
       return;
+    }
 
     window->Resize (window, width, height);
   }
+  gst_caps_unref (caps);
 }
 
 static void
